Profile lists, detail

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -2,5 +2,34 @@ div#login {
   margin-top: 30px;
 }
 
+body {
+  background-color: #efefef;
+}
 
 
+.app-head-nav {
+  margin-bottom: 40px;
+}
+
+
+.profile-edit-preview-photo {
+  width: 100%;
+}
+
+
+
+  ul.pagination {
+    margin: 0 auto;
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
+
+.container.with-bg {
+  background: #fff;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.profile-item {
+  margin-bottom: 40px;
+}
